Other `ui`: mixed changes

--- a/ws/ui/src/app/styles/global.css
+++ b/ws/ui/src/app/styles/global.css
@@ -79,9 +79,9 @@
 }
 
 @layer base {
-  * {
+  /* * { Can't apply this utility
     @apply t:border-border t:outline-ring/50;
-  }
+  } */
   body {
     @apply t:bg-background t:text-foreground;
   }
